--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: ""
 github_username:  SimulCat
 
 # Build settings
-theme: jekyll-theme-cayman
+theme: minima
 plugins:
   - jekyll-feed
 
