--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,10 @@ twitter_username: ""
 github_username:  SimulCat
 
 # Build settings
-theme: minima
+theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
   - jekyll-feed
 
 # Exclude from processing.
