--- a/_config.yml
+++ b/_config.yml
@@ -21,15 +21,15 @@
 title: Simulation Cat
 email: hotquanta@yahoo.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A blog about travels in the early foundations of quantum theory.
+  A blog describing VR experiences and simulations intended to expand on ideas and principles behind the development of quantum theory.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://simulcat.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
 github_username:  SimulCat
 
 # Build settings
-theme: jekyll-theme-cayman
-remote_theme: pages-themes/cayman@v0.2.0
+theme: minima
+#remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have one
   - jekyll-feed
