--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,11 @@ twitter_username: ""
 github_username:  SimulCat
 
 # Build settings
-theme: jekyll-theme-cayman
+theme: cayman
 #remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-  - jekyll-remote-theme # add this line to the plugins list if you already have one
   - jekyll-feed
+#  - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Exclude from processing.
 # The following items will not be processed, by default.
