Got Cayman locally

--- a/_config.yml
+++ b/_config.yml
@@ -26,13 +26,14 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://simulcat.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
 github_username:  SimulCat
-
+google_analytics:
 # Build settings
-theme: cayman
-#remote_theme: pages-themes/cayman@v0.2.0
+theme: jekyll-theme-cayman
+#theme: minmal
+#theme: cayman
 plugins:
   - jekyll-feed
-#  - jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Exclude from processing.
 # The following items will not be processed, by default.
