--- a/_config.yml
+++ b/_config.yml
@@ -28,12 +28,13 @@ twitter_username: ""
 github_username:  SimulCat
 google_analytics:
 # Build settings
-theme: jekyll-theme-cayman
+theme: minima
 #theme: minmal
 #theme: cayman
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-seo-tag
+#  - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Exclude from processing.
 # The following items will not be processed, by default.
