--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ theme: minima
 #theme: minmal
 #theme: cayman
 plugins:
-  - jekyll-feed
   - jekyll-seo-tag
+#  - jekyll-feed
 #  - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Exclude from processing.
